set user defined visitor exec.query(q, new UserDefinedVisitor())
QueruProcess.setVisitorName("fr.corese.UserDefinedVisitor");

clean import wrt errors: query.setImportFailure(true)